# C-Forge

./: .gitattributes  .gitignore  CHANGELOG.md  DISTRIBUCION.md  ESPECIFICACION.md  INTEROPERABILIDAD.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  SECURITY.md  cforge  cforge_diagnostics.py  cforge_lsp.py  cforge_packages.py  cforge_vm.py  cforgev.py  compilador_nativo.py  compilador_wasm.py  main.cfv  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
benchmarks/: 01_cpu_primos.cfv  02_cpu_pi.cfv  03_memoria_mandelbrot.cfv  04_memoria_arboles.cfv  05_concurrencia.cfv  06_io_masiva.cfv  README.md  ejecutar_suite.sh  run_reproducible.py
docs/: EXTERNAL-AUDIT-SCOPE.md  FORGE-SHARED-ARENA.md  LSP.md  PRODUCTION-READINESS.md
ejemplos/: arena_catalogo_16.cfv  arquitectura_08.cfv  arquitectura_09.cfv  arquitectura_10.cfv  calculadora_app.cfv  caracteristicas_02.cfv  clases_05.cfv  estructuras.cfv  extern_cluster_10.cfv  fusion_nativa_15.cfv  gpu_09.cfv  hola.cfv  nucleo_sistema_13.cfv  poliglota_11.cfv  runtime_07.cfv  sintaxis_multilenguaje_17.cfv  wasm_09.cfv
ejemplos/interop/: csharp_aot.cfv  forge_symbols.js  interoperabilidad.cfv  native_math.cpp
ejemplos/modulos/: aplicacion.cfv  utilidades.cfv
herramientas/: cforge_cli.cpp  cforgev_ffi_runner.cpp  generar_amalgama.py  verificar_interop_macos.sh
herramientas/vscode-cforgev/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  extension.js  language-configuration.json  package-lock.json  package.json
include/: cforge_shared_arena.h  cforgev_ffi.h
outputs/: C-FORGE-CHEATSHEET.md  C-FORGEV-CHEATSHEET.md  GUIA-PUBLICACION.md  cforge-master  cforge_master.cpp
packaging/: build_portable.py
packaging/debian/: build-deb.sh
packaging/homebrew/: generate.py
registry/: README.md  index.json
tests/: arena_roundtrip.cpp  test_cforgev.py  test_professional_tooling.py  test_shared_arena.py
(+11 files in other folders)
