[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cforgev"
version = "1.4.0"
description = "Lenguaje de programación experimental C-Forge"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Vemoris Group" }]
keywords = ["language", "compiler", "interpreter", "cforgev"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/VemorisGroup/C-Forge"
Repository = "https://github.com/VemorisGroup/C-Forge"
Issues = "https://github.com/VemorisGroup/C-Forge/issues"

[project.scripts]
cforge = "cforgev:main"
cforgev = "cforgev:main"

[tool.setuptools]
py-modules = ["cforgev", "compilador_nativo", "compilador_wasm"]
